# hakyll-citeproc-example

./: CiteProc.hs  CiteProcWorking.hs  README.lhs  README.md  hakyll-citeproc-example.cabal  leksah17.lkshs  leksah17.lkshw  pageWithBiblio.markdown  site.hs  site.lhs  stack.yaml
