Name:               hakyll-citeproc-example
Version:            0.1.0.0
Build-type:         Simple
Cabal-version:      >= 1.10

Executable site
  Main-is:          README.lhs
  Build-depends:    base == 4.*, hakyll == 4.12.*
  Ghc-options:      -threaded -Wall
  Default-language: Haskell2010

Executable site2
  Main-is:          CiteProc.hs
  Build-depends:    base == 4.*
    , pandoc
    , pandoc-citeproc
    , process
    , text
    , aeson
    , lens-aeson
    , lens

  Ghc-options:      -threaded -Wall
  Default-language: Haskell2010
